# mcp-server1

./: .gitignore  LICENSE  README.md  generate_certs.py  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py  health.py  upload.py
app/api/endpoints/: __init__.py  health.py  upload.py  web.py
app/core/: __init__.py  app_factory.py  config.py
app/db/: database.py  models.py
app/schemas/: __init__.py
app/templates/: index.html
app/utils/: cert_gen.py  postman_parser.py
